<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="379dp"
            android:background="#3100BCD4"
            android:text="@string/CalcPrint"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Calc1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/Calc1"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/Calc2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/Calc2"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Calc3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/Calc3"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/CalcPlus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/CalcPlus"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Calc4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/Calc4"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/Calc5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/Calc5"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/Calc6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/Calc6"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/CalcMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/CalcMinus"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Calc7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/Calc7"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/Calc8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/Calc8"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/Calc9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/Calc9"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/CalcMultiplication"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/CalcMultiplication"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/CalcClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/CalcClear"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/Calc0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/Calc0"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/CalcDot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/CalcDot"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/CalcDivision"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/CalcDivision"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calcEqual"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3100BCD4"
                android:text="@string/CalcEqual"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>